syntax = "proto3";

package user;

option go_package = "github.com/imimran/go-grpc-auth/pb";

import "google/api/annotations.proto";

// --- Shared Utility Messages (Defined ONCE) ---

message Empty {}

message UserId {
  int64 id = 1; 
}

message AddressId {
  string id = 1;
}

// --- User Models & Messages ---

message User {
  int64 id = 1;
  string email = 2;
  string password = 3; 
  string full_name = 4;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string full_name = 3;
}

message UpdateUserRequest {
  int64 id = 1;
  string email = 2;
  string password = 3;
  string full_name = 4;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message UserListResponse {
  repeated User users = 1;
}

// --- Address Models & Messages ---

message Address {
    string id = 1;
    string raw_address = 2;
    string normalized_address = 3;
    double latitude = 4;
    double longitude = 5;
    string accuracy = 6;
    string source = 7;
}

message CreateAddressRequest {
    int64 user_id = 1; // Changed to int64 to match UserId type above
    string raw_address = 2;
    double latitude = 3;
    double longitude = 4;
    string accuracy = 5;
    string source = 6;
}

message UpdateAddressRequest {
    string id = 1;
    string raw_address = 2;
    double latitude = 3;
    double longitude = 4;
    string accuracy = 5;
    string source = 6;
}

message AddressListResponse {
    repeated Address addresses = 1;
}

// --- Services ---

service UserService {
  rpc CreateUser(CreateUserRequest) returns (User) {
    option (google.api.http) = { post: "/v1/users" body: "*" };
  }
  rpc GetUser(UserId) returns (User) {
    option (google.api.http) = { get: "/v1/users/{id}" };
  }
  rpc UpdateUser(UpdateUserRequest) returns (User) {
    option (google.api.http) = { put: "/v1/users/{id}" body: "*" };
  }
  rpc DeleteUser(UserId) returns (Empty) {
    option (google.api.http) = { delete: "/v1/users/{id}" };
  }
  rpc ListUsers(Empty) returns (UserListResponse) {
    option (google.api.http) = { get: "/v1/users" };
  }
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = { post: "/v1/login" body: "*" };
  }
}

service AddressService {
    rpc CreateAddress(CreateAddressRequest) returns (Address);
    rpc GetAddress(AddressId) returns (Address);
    rpc UpdateAddress(UpdateAddressRequest) returns (Address);
    rpc DeleteAddress(AddressId) returns (Empty);
    rpc ListAddressesByUserId(UserId) returns (AddressListResponse);
}